--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
   <script defer src="main.dart.js" type="application/javascript"></script>
 </head>
 <body>
